# Recall-Rogue

./: .dockerignore  .env.example  .env.local.example  .gitignore  .mcp.json  CHAIN-TAGGING-PROBLEM.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CAPABILITIES.md  CODEX-OVERNIGHT-TASKS.md  Dockerfile  README.md  RELIC-DESIGN-BRIEF.md  STEAM_RESUBMIT_NOTES.md  capacitor.config.ts  chain-tagging-sample-facts.json  combat-10-cards-snapshot.md  combat-basic-snapshot.md  combat-boss-snapshot.md  combat-low-hp-snapshot.md  docker-compose.prod.yml  domain-samples.json  index.html  inspect-dungeon.cjs  korean_concise_answers.json  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vercel.json  vite.config.ts  vitest.config.ts  wrangler.toml
.claude/: mcp.json  settings.json  settings.local.json
.github/: dependabot.yml
data/: deck-ideas.md  entity-queue.json  fact-lint-report.json  facts-to-fix.json  haiku-blind-results.json  haiku-blind-test.json  ingested-entities.json  inspection-registry.json  llm-fixes.json  self-answering-batches.json  self-answering-fix-report.json  sonnet-blind-results.json  sonnet-full-review.json  trivia-sa-final-skipped.json  trivia-sa-first-word-leaks.json  trivia-sa-fixes.json  trivia-sa-skipped.json  trivia-sa-still-skipped.json  trivia-self-answering.json
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  ART_STYLE_GUIDE.md  AUDIT_REPORT_2026-04-08.md  CLAUDE_CAPABILITIES.md  CONTENT_STRATEGY.md  DECISIONS.md  DEPENDENCIES.md  DEPLOYMENT.md  DEVPRESET-REFERENCE.md  ECONOMY.md  ENEMY-ANIMATIONS.md  EVENT-BUS-REFERENCE.md  FACT_DATABASE_REPORT.md  FULL_DATABASE_FIX.md  GAME_DESIGN.md  GAME_DESIGN_V1_ARCHIVE.md  IMAGE_GENERATION.md  INDEX.md  MASS-SIMULATION-REPORT-2026-03-18.md  (+15 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: filesave.rs  lan.rs  main.rs  steam.rs
(+4833 files in other folders)
